--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.2",
+    "bcrypt": "^5.1.0",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "formik": "^2.2.9",
+    "googleapis": "^110.0.0",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.13.0",
     "mongoose": "^6.8.2",
     "next": "13.1.1",
     "next-auth": "^4.18.8",
     "next-connect": "^0.13.0",
     "next-redux-wrapper": "^8.1.0",
+    "nodemailer": "^6.9.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
