--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
+    "swiper": "^8.4.6",
     "yup": "^0.32.11"
   }
 }
