FE: Create product slug page with product details - Create and implement product info component - Create and implement product share component - Create and implement product main swiper component

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.7",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
     "@reduxjs/toolkit": "^1.9.1",
@@ -30,8 +33,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-image-magnify": "^2.7.4",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.2",
+    "react-share": "^4.4.1",
     "react-spinners": "^0.13.7",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
