--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
     "swiper": "^8.4.6",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "yup-phone": "^1.3.2"
   }
 }
