--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@mui/material": "^5.11.7",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
+    "@paypal/react-paypal-js": "^7.8.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@stripe/react-stripe-js": "^2.0.0",
+    "@stripe/stripe-js": "^1.49.0",
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
     "dayjs": "^1.11.7",
@@ -44,6 +47,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
+    "stripe": "^11.15.0",
     "swiper": "^8.4.6",
     "yup": "^0.32.11",
     "yup-phone": "^1.3.2"
