--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@stripe/stripe-js": "^1.49.0",
     "axios": "^1.2.2",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.35.0",
     "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "express-fileupload": "^1.4.0",
     "formik": "^2.2.9",
     "googleapis": "^110.0.0",
     "jsonwebtoken": "^9.0.0",
