--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-responsive": "^9.0.2",
     "react-share": "^4.4.1",
     "react-spinners": "^0.13.7",
+    "react-toastify": "^9.1.2",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
