Update Admin dashboard - Create and implement admin category (Create a category and list all created categories) - Implement markup and styling - Update middleware - Create admin middleware for authorization - Create the post, delete and update category api endpoint

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sass": "^1.57.1",
+    "slugify": "^1.6.5",
     "stripe": "^11.15.0",
     "swiper": "^8.4.6",
     "yup": "^0.32.11",
