--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.7",
+    "@mui/x-date-pickers": "^6.0.3",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
     "@paypal/react-paypal-js": "^7.8.2",
@@ -22,6 +24,7 @@
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cloudinary": "^1.35.0",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
