--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "next-redux-wrapper": "^8.1.0",
     "nodemailer": "^6.9.0",
     "react": "18.2.0",
+    "react-color-extractor": "^1.1.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-image-magnify": "^2.7.4",
