--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.7",
+    "@mui/utils": "^5.11.13",
     "@mui/x-date-pickers": "^6.0.3",
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next/font": "13.1.1",
